# cclp

./: CMakeLists.txt  README.md  package.xml  setup.py
cclp/: import_module.py
include/: lines_and_points.hpp
launch/: cclp.launch.yaml
msg/: Line.msg  MapRequest.msg
scripts/: line_map_server_node.py  map_editor.py
src/: cord_correction_node.cpp  correction_test.cpp  lines_and_points.hpp  monitor.cpp
